--- a/index.html
+++ b/index.html
@@ -11,154 +11,62 @@
 
 <body>
     <header>
-        <div class="menu">
-            <img src="Vector.png" id="logov">
-            <img src="W.png" id="logow">
-        </div>
-        <div class="nav">
+        <div class="frame1">
+            <div class="frame11">
+                <div class="frame111">
+                    <div class="frame1111">
 
-            <a href="">Главная</a>
-            <a href="">Сеансы</a>
-            <a href="">Отзовы</a>
-            <a href="">Контакты</a>
-            <a href="">Новости</a>
-            <a href="">Обо мне</a>
-            <a href="">Блог</a>
+                    </div>
+                </div>
+                <div class="frame112">
+                    <div class="frame1121">
 
-        </div>
-        <div class="batt">
-            <form>
-                <button>Записаться на сеанс</button>
+                    </div>
+                </div>
+            </div>
+            <form class="frame12">
+                <a class="frame121">Login</a>
             </form>
+            <form class="frame13">
+                <a class="frame131">Create an account</a>
+            </form>
+            <div class="frame14">
+                <div class="frame141">
+                    <a class="frame1411">Company</a>
+                </div>
+                <a class="frame142">Blog</a>
+
+                <a class="frame143">Contact Us</a>
+
+                <div class="frame144">
+                    <a class="frame1441">Properties</a>
+                </div>
+
+                <a class="frame145">Home</a>
+
+            </div>
+        </div>
+        <div class="frame2">
+            <p class="frame21">Live Green, Live Luxuriously.</p>
+        </div>
+        <div class="frame3">
+            <p class="frame22">Discover the Advantages of Eco-Friendly Homes with Our Real Estate Agency.</p>
+        </div>
+        <div class="frame4">
+            <ul class="left_menu">
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+            <input type="text" class="search-input">
+            <button class="search-button"></button>
         </div>
     </header>
     <main>
-        <div class="head_logo">
-            <div class="head_text">
-                <p>Укрепление здоровья</p>
-                <p class="text">Акватерапия<br>
-                    RitmStyle</p>
-            </div>
-        </div>
-        <div class="services">
-            <div id="servicestext">
-                <p>Сеансы RitmStyle</p>
-            </div>
-            <div class="servicesone">
-                <p class="textone">Стандартный RitmStyle</p>
-            </div>
-            <div class="servicestwo">
-                <p class="texttwo">RitmStyle для беременных</p>
-            </div>
-            <div class="servicesthree">
-                <p class="textthree">RitmStyle + красочная<br>
-                    подводная фотосессия</p>
-            </div>
-            <div class="servicesfour">
-                <p class="textfour">RitmStyle для пар</p>
-            </div>
-            <div class="servicesfive">
-                <p class="textfive">RitmStyle с полным<br>
-                    погружением под воду</p>
-            </div>
-        </div>
-        <div class="reviews">
-            <div id="heading">
-                <p>Отзовы</p>
-            </div>
-            <div class="review">
-                <p class="revie">Кира Иванова</p>
-                <p class="revi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus diam risus morbi nulla
-                    dictum. Urna mi
-                    orci gravida placerat amet, eu, aliquet facilisis aliquet. Dolor praesent nam ornare fringilla enim
-                    nibh
-                    donec sit imperdiet. Amet, diam duis eu sit et. Volutpat vestibulum a lectus sed blandit.<br>
-                    <br>
-                    Venenatis urna mattis eu enim molestie iaculis et aliquet. Velit in pellentesque vestibulum
-                    phasellus
-                    orci. Fermentum sed phasellus aliquam nulla non aenean. Quisque id nunc, mauris potenti a massa.
-                    Fermentum at elit, convallis leo dolor aliquet id elementum. Ullamcorper sociis et cum bibendum in
-                    egestas. Diam, urna, sed tempus mollis aliquam elit. Facilisi nam nulla pulvinar mauris vel lacinia
-                    venenatis.
-                </p>
-            </div>
-            <div class="reviewtwo">
-                <p class="revietwo">Александра Дмитриева</p>
-                <p class="revitwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur nulla viverra
-                    egestas tellus. Cursus scelerisque phasellus netus proin. Etiam mauris maecenas facilisis faucibus
-                    mauris eleifend purus. Purus dictum vulputate elementum mauris amet.
-                    <br><br>
-                    Hendrerit sit cras ullamcorper morbi quam vitae ante nibh. Ornare ipsum mi nisl augue placerat
-                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque
-                    diam.\
-                    Semper sed aenean in etiam mus praesent diam semper in. Pretium id a amet, massa ligula nibh
-                    faucibus ornare. Ut aenean rhoncus sed nam ut diam dapibus. Risus nibh faucibus eu vestibulum
-                    tempor, quis ultrices mauris. Porta enim, donec odio sagittis, eget velit at.
-                </p>
-            </div>
-            <div class="reviewthree">
-                <p class="reviethree">Яна Жернова </p>
-                <p class="revithree">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacinia eget mattis orci
-                    aliquam enim tincidunt gravida aliquet ut. Ipsum vulputate morbi felis, lobortis tincidunt. Pretium
-                    dictum odio feugiat auctor diam sit viverra gravida. Lobortis arcu rhoncus, mi mi vitae feugiat
-                    amet, vitae ac. Cursus diam turpis iaculis nisi sit. Vel blandit et sit elit vestibulum feugiat
-                    proin tempor, justo. Diam commodo, pellentesque at porttitor tristique faucibus faucibus morbi.
-                    Bibendum pretium lacus, tempus viverra vitae odio nunc eget.
-                    <br><br>
-                    Tortor fermentum orci neque sed. Mauris faucibus diam lorem erat ullamcorper donec egestas neque.
-                    Maecenas malesuada mauris magnis sed id. Luctus vitae justo, in consectetur arcu. Nulla feugiat at
-                    eu in aliquet. Diam nunc, libero mauris tellus suspendisse morbi sagittis semper.
-                </p>
-            </div>
-            <div class="control">
-            </div>
-        </div>
-        <div>
-            <div id="headingtwo">
-                <p>Об RitmStyle</p>
-            </div>
-            <div class="group5">
-                <p class="grou5">RitmStyle массаж</p>
-                <p class="gro5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in purus, sed tellus eget
-                    mattis nibh quam. Eu ornare nunc, id est. Erat consectetur etiam a sit diam in imperdiet amet. Diam
-                    nisl, ipsum suscipit amet. Eleifend amet habitasse proin quis adipiscing.
-                    <br><br>
-                    Nisl convallis mauris in consequat. Sit ac vitae posuere maecenas dictumst quam. Felis amet diam,
-                    non augue massa. Egestas molestie lobortis rhoncus, elit nulla nisl. Habitant tortor at tempor.
-                </p>
-            </div>
-            <div class="group4">
-                <p class="grou4">RitmStyle гидротерапия</p>
-                <p class="gro4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu cras quis ac a non ut
-                    viverra turpis eget. Hendrerit quis pulvinar massa ipsum sem. Donec posuere nulla enim non neque
-                    etiam. Eros arcu, pulvinar penatibus luctus ridiculus sagittis vel nunc hac. Nisi, diam tincidunt
-                    dui viverra. Eget quis ultricies sem nunc risus senectus luctus ultricies. Enim feugiat pharetra
-                    pharetra et.
-                    <br><br>
-                    Pulvinar arcu at morbi posuere cursus. Fermentum est sit enim velit ornare molestie. Ipsum nisi id
-                    sed tempor elementum. Mi nunc eget pellentesque ipsum. Suspendisse risus a id vel massa tincidunt.
-                    Hendrerit blandit in augue vel mi quam magna egestas. Fringilla ac lacus viverra ullamcorper leo,
-                    enim vitae id aliquam. Magna sed tristique tellus enim, netus tempor at elit dui. Ullamcorper
-                    hendrerit feugiat libero tellus diam egestas dui tellus odio.</p>
-            </div>
-            <div class="rectan">
 
-            </div>
-            <div class="rectanone">
-
-            </div>
-        </div>
-        <div class="price">
-
-        </div>
-        <div class="contacts">
-
-        </div>
     </main>
     <footer>
-        <div class="maps">
-            
-        </div>
+
     </footer>
 </body>
 
