--- a/index.html
+++ b/index.html
@@ -53,13 +53,20 @@
             <p class="frame22">Discover the Advantages of Eco-Friendly Homes with Our Real Estate Agency.</p>
         </div>
         <div class="frame4">
-            <ul class="left_menu">
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-            <input type="text" class="search-input">
-            <button class="search-button"></button>
+            <form action="#">
+                <select class="js-select2" name="city" placeholder="Выберите город">
+                    <option value="0">For Sales</option>
+                    <option value="1">For Sales</option>
+                    <option value="2">For Sales</option>
+                    <option value="3">For Sales</option>
+                    <option value="4">For Sales</option>
+                    <option value="5">For Sales</option>
+                    ...
+                </select>
+                <input type="search" name="" id="search"
+                    placeholder="Enter an address, city, neighborhood, or ZIP code.">
+                <input type="submit" value="">
+            </form>
         </div>
     </header>
     <main>
