--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p class="frame22">Discover the Advantages of Eco-Friendly Homes with Our Real Estate Agency.</p>
         </div>
         <div class="frame4">
-            <form action="#">
+            <form action="#" class="formpoi">
                 <select class="js-select2" name="city" placeholder="Выберите город">
                     <option value="0">For Sales</option>
                     <option value="1">For Sales</option>
@@ -70,6 +70,15 @@
         </div>
     </header>
     <main>
+        <div class="whowe">
+            <div>
+
+            </div>
+            <div class="photowrite">
+
+            </div>
+
+        </div>
 
     </main>
     <footer>
