--- a/figma/dz2/index.html
+++ b/figma/dz2/index.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fon.css">
 </head>
 <body>
     <header>
         <div>
-            
+
         </div>
 
     </header>
     <main>
-
+        <a href="#">call to action</a>
     </main>
     <footer>
 
