--- a/TFT/index2.html
+++ b/TFT/index2.html
@@ -11,14 +11,11 @@
 
 </header>
 <main>
-    <div class="parent">
-        <div class="a">Hi</div>
-        <div class="a img"></div>
-        <div class="a img"></div>
-        <div class="a">Hi</div>
-        <div class="a">Hi</div>
-        <div class="a img"></div>
-    </div>
+  <div class="all">
+    <h1>Welcome</h1>
+    <div class="left"></div>
+    <div class="right"></div>
+  </div>
 </main>
 <footer>
     <div class="nav">
