--- a/TFT/index.html
+++ b/TFT/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate Agency - Landing Page</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/TFT/css/main.css">
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="#"><img src="/css/img/logo.svg" alt="EcoHaven Realty" class="logo"></a>
+            <a href="#"><img src="/TFT//css/img/logo.svg" alt="EcoHaven Realty" class="logo"></a>
             <ul class="nav-list">
                 <li><a href="#">Home</a></li>
                 <li class="btn-link">
@@ -60,17 +60,17 @@
     <main>
         <div id="section-are">
             <article>
-                <span><img src="/css/img/hr.svg" alt="-" class="hr"> WHO WE ARE</span>
+                <span><img src="/TFT//css/img/hr.svg" alt="-" class="hr"> WHO WE ARE</span>
                 <h2>Discover Sustainable Luxury Living with EcoHaven Realty.</h2>
                 <p>EcoHaven Realty is a real estate agency specialising in eco-friendly homes and sustainable living. We
                     offer a range of eco-friendly properties, including energy-efficient homes, homes built with
                     eco-friendly materials, and homes equipped with sustainable technologies such as solar panels.</p>
                 <a href="#" class="btn">Our Company</a>
             </article>
-            <img src="/css/img/right.png" class="right">
-            <img src="/css/img/left.png" class="left">
+            <img src="/TFT//css/img/right.png" class="right">
+            <img src="/TFT//css/img/left.png" class="left">
             <article>
-                <span><img src="/css/img/hr.svg" alt="-" class="hr"> OUR MISSION</span>
+                <span><img src="/TFT//css/img/hr.svg" alt="-" class="hr"> OUR MISSION</span>
                 <h2>Building a Better Future with Eco-Friendly Homes.</h2>
                 <p>The agency's mission is to provide clients with a selection of properties that meet high
                     environmental standards, while also providing a comfortable and luxurious lifestyle.</p>
@@ -89,50 +89,50 @@
                 <div class="clg">
                     <p><strong>$ 450,000</strong><span><button type="button">FOR SALES</button></span></p>
                     <p>4 beds &bull; 1 baths &bull; 1931 sqft &bull; Eco-friendly <span class="clg-right-span"><img
-                                src="/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
-                    <img src="/css/img/price1.png" class="clg-image">
+                                src="/TFT//css/img/clock.svg" class="clg-right"> 2years ago</span></p>
+                    <img src="/TFT//css/img/price1.png" class="clg-image">
                     <p class="clg-label"><span>Plot 16 Chief Nwuke Street Trans Amadi Industrial Layout</span> <img
-                            src="/css/img/heart-straight.svg" class="heart"></p>
+                            src="/TFT//css/img/heart-straight.svg" class="heart"></p>
                 </div>
                 <div class="clg">
                     <p><strong>$ 450,000</strong><span><button type="button">FOR SALES</button></span></p>
                     <p>4 beds &bull; 1 baths &bull; 1931 sqft &bull; Eco-friendly <span class="clg-right-span"><img
-                                src="/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
-                    <img src="/css/img/price2.png" class="clg-image">
+                                src="//TFT/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
+                    <img src="/TFT//css/img/price2.png" class="clg-image">
                     <p class="clg-label"><span>Plot 16 Chief Nwuke Street Trans Amadi Industrial Layout</span> <img
-                            src="/css/img/heart-straight.svg" class="heart"></p>
+                            src="/TFT//css/img/heart-straight.svg" class="heart"></p>
                 </div>
                 <div class="clg">
                     <p><strong>$ 450,000</strong><span><button type="button">FOR SALES</button></span></p>
                     <p>4 beds &bull; 1 baths &bull; 1931 sqft &bull; Eco-friendly <span class="clg-right-span"><img
-                                src="/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
-                    <img src="/css/img/price3.jpeg" class="clg-image">
+                                src="/TFT//css/img/clock.svg" class="clg-right"> 2years ago</span></p>
+                    <img src="/TFT//css/img/price3.jpeg" class="clg-image">
                     <p class="clg-label"><span>Plot 16 Chief Nwuke Street Trans Amadi Industrial Layout</span> <img
-                            src="/css/img/heart-straight.svg" class="heart"></p>
+                            src="/TFT//css/img/heart-straight.svg" class="heart"></p>
                 </div>
                 <div class="clg">
                     <p><strong>$ 450,000</strong><span><button type="button">FOR SALES</button></span></p>
                     <p>4 beds &bull; 1 baths &bull; 1931 sqft &bull; Eco-friendly <span class="clg-right-span"><img
-                                src="/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
-                    <img src="/css/img/price4.png" class="clg-image">
+                                src="/TFT//css/img/clock.svg" class="clg-right"> 2years ago</span></p>
+                    <img src="/TFT//css/img/price4.png" class="clg-image">
                     <p class="clg-label"><span>Plot 16 Chief Nwuke Street Trans Amadi Industrial Layout</span> <img
-                            src="/css/img/heart-straight.svg" class="heart"></p>
+                            src="/TFT//css/img/heart-straight.svg" class="heart"></p>
                 </div>
                 <div class="clg">
                     <p><strong>$ 450,000</strong><span><button type="button">FOR SALES</button></span></p>
                     <p>4 beds &bull; 1 baths &bull; 1931 sqft &bull; Eco-friendly <span class="clg-right-span"><img
-                                src="/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
-                    <img src="/css/img/price5.png" class="clg-image">
+                                src="/TFT//css/img/clock.svg" class="clg-right"> 2years ago</span></p>
+                    <img src="/TFT//css/img/price5.png" class="clg-image">
                     <p class="clg-label"><span>Plot 16 Chief Nwuke Street Trans Amadi Industrial Layout</span> <img
-                            src="/css/img/heart-straight.svg" class="heart"></p>
+                            src="/TFT//css/img/heart-straight.svg" class="heart"></p>
                 </div>
                 <div class="clg">
                     <p><strong>$ 450,000</strong><span><button type="button">FOR SALES</button></span></p>
                     <p>4 beds &bull; 1 baths &bull; 1931 sqft &bull; Eco-friendly <span class="clg-right-span"><img
-                                src="/css/img/clock.svg" class="clg-right"> 2years ago</span></p>
-                    <img src="/css/img/price6.png" class="clg-image">
+                                src="/TFT//css/img/clock.svg" class="clg-right"> 2years ago</span></p>
+                    <img src="/TFT//css/img/price6.png" class="clg-image">
                     <p class="clg-label"><span>Plot 16 Chief Nwuke Street Trans Amadi Industrial Layout</span> <img
-                            src="/css/img/heart-straight.svg" class="heart"></p>
+                            src="/TFT//css/img/heart-straight.svg" class="heart"></p>
                 </div>
                 
             </div>
@@ -147,21 +147,21 @@
                     <p class="block-p">One of the most significant benefits of owning an Eco Haven Realty Home is lower
                         energy costs. Our eco-friendly homes are designed to use less energy with our solar powered
                         system, saving money on bills.</p>
-                    <img src="/css/img/block1.png" alt="">
+                    <img src="/TFT//css/img/block1.png" alt="">
                 </div>
                 <div class="block">
                     <h3 class="block-b">Low energy costs</h3>
                     <p class="block-p">One of the most significant benefits of owning an Eco Haven Realty Home is lower
                         energy costs. Our eco-friendly homes are designed to use less energy with our solar powered
                         system, saving money on bills.</p>
-                    <img src="/css/img/block2.jpeg" alt="">
+                    <img src="/TFT//css/img/block2.jpeg" alt="">
                 </div>
                 <div class="block">
                     <h3 class="block-b">Low energy costs</h3>
                     <p class="block-p">One of the most significant benefits of owning an Eco Haven Realty Home is lower
                         energy costs. Our eco-friendly homes are designed to use less energy with our solar powered
                         system, saving money on bills.</p>
-                    <img src="/css/img/block3.png" alt="">
+                    <img src="/TFT//css/img/block3.png" alt="">
                 </div>
             </div>
         </div>
@@ -171,34 +171,34 @@
             <div class="feet-block">
                 <div class="feet">
                     <h3>Felix Jimoh</h3>
-                    <p class="feet-b">4.9 <img src="/css/img/Ratings/Small.svg" alt=""></p>
+                    <p class="feet-b">4.9 <img src="/TFT//css/img/Ratings/Small.svg" alt=""></p>
                     <p class="feet-b">“I had a wonderful experience working with EcoHaven Realty to find my new home.
                         They really took the time to understand what was important to me and helped me find a home that
                         was not only beautiful but also eco-friendly and energy-efficient. </p>
                 </div>
                 <div class="feet">
                     <h3>Felix Jimoh</h3>
-                    <p class="feet-b">4.9 <img src="/css/img/Ratings 2/Property 1=2 Stars.svg" alt=""></p>
+                    <p class="feet-b">4.9 <img src="/TFT//css/img/Ratings 2/Property 1=2 Stars.svg" alt=""></p>
                     <p class="feet-b">“I had a wonderful experience working with EcoHaven Realty to find my new home.
                         They really took the time to understand what was important to me and helped me find a home that
                         was not only beautiful but also eco-friendly and energy-efficient. </p>
                 </div>
                 <div class="feet">
                     <h3>Felix Jimoh</h3>
-                    <p class="feet-b">4.9 <img src="/css/img/Ratings 3/Property 1=3 Stars.svg" alt=""></p>
+                    <p class="feet-b">4.9 <img src="/TFT//css/img/Ratings 3/Property 1=3 Stars.svg" alt=""></p>
                     <p class="feet-b">“I had a wonderful experience working with EcoHaven Realty to find my new home.
                         They really took the time to understand what was important to me and helped me find a home that
                         was not only beautiful but also eco-friendly and energy-efficient. </p>
                 </div>
             </div>
             <div class="tt1">
-                <a href="#" class="a-left"><img src="/css/img/arrow-left.svg" alt=""></a><a href="#"
-                    class="a-right"><img src="/css/img/arr-right.svg" alt=""></a>
+                <a href="#" class="a-left"><img src="/TFT//css/img/arrow-left.svg" alt=""></a><a href="#"
+                    class="a-right"><img src="/TFT//css/img/arr-right.svg" alt=""></a>
             </div>
         </div>
         <div class="faq">
             <div class="faq-left">
-                <span class="faq-hr" style="margin-bottom: 12px;"><img src="/css/img/hr.svg" alt="-" class="hr"> OUR
+                <span class="faq-hr" style="margin-bottom: 12px;"><img src="/TFT//css/img/hr.svg" alt="-" class="hr"> OUR
                     MISSION</span>
                 <h2 style="margin-bottom: 24px;">Common questions asked about our eco-friendly homes.</h2>
                 <p style="margin-bottom: 40px;">Here are some important questions that are frequently asked and the
@@ -314,12 +314,12 @@
         <div id="footer">
             <div class="f-social">
                 <div class="column">
-                    <a href="#"><img src="/css/img/logo.svg" alt="EcoHaven Realty" class="logo"></a>
+                    <a href="#"><img src="/TFT//css/img/logo.svg" alt="EcoHaven Realty" class="logo"></a>
                     <div class="social">
-                        <div class="facebook"><a href="#"><img src="/css/img/Frame 40.svg" alt=""></a></div>
-                        <div class="facebook"><a href="#"><img src="/css/img/Frame 41.svg" alt=""></a></div>
-                        <div class="facebook"><a href="#"><img src="/css/img/Frame 42.svg" alt=""></a></div>
-                        <div class="facebook"><a href="#"><img src="/css/img/Frame 43.svg" alt=""></a></div>
+                        <div class="facebook"><a href="#"><img src="/TFT//css/img/Frame 40.svg" alt=""></a></div>
+                        <div class="facebook"><a href="#"><img src="/TFT//css/img/Frame 41.svg" alt=""></a></div>
+                        <div class="facebook"><a href="#"><img src="/TFT//css/img/Frame 42.svg" alt=""></a></div>
+                        <div class="facebook"><a href="#"><img src="/TFT//css/img/Frame 43.svg" alt=""></a></div>
                     </div>
                     <a href="#" class="f-button">Contact Us</a>
                 </div>
