--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,12 @@
                 <button class="slip_butt">Shop Now</button>
             </div>
         </div>
+        
+        <div class="tet">
+            <hr>
+        </div>
+        <div class="tett"><p class="tetp">Designed to reduce single-use plastic waste in your daily routine. Scientifically-proven to perform.</p>
+        </div>
     </main>
     <footer>
 
