--- a/shop/index.html
+++ b/shop/index.html
@@ -65,6 +65,185 @@
             <a class="frameright1" href="">По популярности</a>
             </div>
         </div>
+        
+        <div class="maiblo">
+            <div class="maiosnov">
+                <div class="maicard">
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 59.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 17.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="maicard">
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="maicard">
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div>
+                            <img src="image 58.png">
+                        </div>
+                        <div class="cardtext">
+                            <div class="brand">
+                                <img src="image 16.png">
+                            </div>
+                            <div class="cardname">
+                                <a class="nam" href="">Мужские брюки BOSS</a>
+                                <a class="namcen" href="">16999</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
