--- a/shop/index.html
+++ b/shop/index.html
@@ -242,11 +242,86 @@
                         </div>
                     </div>
                 </div>
+                <div class="maifoo">
+                    <span class="ten">12 из 2345</span>
+                    <a class="noten">Показать еще</a>
+                </div>
             </div>
         </div>
     </main>
     <footer>
-
+        <div class="rss">
+            <label for="rss">Подпишитесь на нашу рассылку и получи скидку 10%</label>
+            <div class="rssInput">
+                <input type="text" id="rss" placeholder="E-mail">
+                <input class="but" type="submit" value="Подписаться">
+            </div>
+        </div>
+        <div class="footMav">
+            <div class="footItem">
+                <h3>Каталог</h3>
+                <a href="#">Женщинам</a>
+                <a href="#">Мужяинам</a>
+            </div>
+            <div class="footItem">
+                <h3>Покупки онлайн</h3>
+                <a href="#">Доставка</a>
+                <a href="#">Оплата</a>
+                <a href="#">Возврат</a>
+                <a href="#">Отслеживание заказа</a>
+            </div>
+            <div class="footItem">
+                <h3>Покупателям</h3>
+                <a href="#">Правила работы интернет-магазина</a>
+                <a href="#">OUTLET</a>
+                <a href="#">Подарочные карты</a>
+                <a href="#">Новости и акции</a>
+                <a href="#">Корпоративные продажи</a>
+                <a href="#">Обратная связь</a>
+            </div>
+            <div class="footItem">
+                <h3>Услуги и сервис</h3>
+                <a href="#">Парковка для клиентов</a>
+                <a href="#">Кафе и рестораны</a>
+                <a href="#">Банки</a>
+                <a href="#">Кафе и рестораны</a>
+                <a href="#">Ремонт обуви</a>
+                <a href="#">Портной</a>
+                <a href="#">Гравёр</a>
+            </div>
+            <div class="footItem">
+                <h3>Универмаг</h3>
+                <a href="#">Схема Универмага</a>
+                <a href="#">О компании</a>
+                <a href="#">Карьера</a>
+                <a href="#">Реквизиты</a>
+                <a href="#">Партнерам</a>
+                <a href="#">Арендаторам</a>
+                <a href="#">Акционерам</a>
+                <a href="#">Охрана труда</a>
+                <a href="#">Контакты</a>
+            </div>
+        </div>
+        <div class="foot">
+            <div class="social">
+                <div><b>Мы в соц. сетях</b></div>
+                <div class="socItem">
+                    <img src="./style/img/social/vk.svg" alt="#">
+                    <img src="./style/img/social/insta.svg" alt="#">
+                    <img src="./style/img/social/ok.svg" alt="#">
+                </div>
+            </div>
+            <div class="copy">
+                <p>© Универмаг Московский, 2020—2021.</p>
+                <a href="#">Политика конфиденциальности</a>
+            </div>
+            <div class="pay">
+                <img src="./style/img/pay/mastercard.svg" alt="mastercard">
+                <img src="./style/img/pay/visa.svg" alt="visa">
+                <img src="./style/img/pay/mir.svg" alt="mir">
+                <img src="./style/img/pay/paykeeper.png" alt="paykeeper">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
